@@ -2,6 +2,12 @@ $Id$
 
 2020-10-15  Christian Franke  <franke@computer.org>
 
+	drivedb.h:
+	- Crucial/Micron MX500 SSDs (FW <= M3CR032): Remove entry (#1227).
+	- Crucial/Micron Client SSDs: Rename entry. Fix name of attribute 127.
+	  This prevents false 'Currently unreadable (pending) sectors' warnings
+	  from smartd (#1227, #1294, #1311, #1336).
+
 	os_win32.cpp: Fix removal of trailing blanks.
 	Silence misleading -Wstring-compare warning from g++ 10.2.0
 	(GCC Bugzilla 97336).
